--- a/index.html
+++ b/index.html
@@ -6,9 +6,77 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="/Users/timucincakir/Dev/Projects/SecretAgentSupply/resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="/Users/timucincakir/Dev/Projects/SecretAgentSupply/resources/css/style.css">
-    <title>Document</title>
+    <title>Secret Agent Supply Inc.</title>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <img src="/Users/timucincakir/Dev/Projects/SecretAgentSupply/resources/images/logo.png" alt="">
+            <span>SECRET AGENT SUPPLY INC.</span>
+        </div>
+    </header>
+    <!-- Main Section -->
+    <div class="main-banner">
+        <div class="container">
+            <div class="headline">
+            <h4>NEW ARRIVAL</h4>
+            <h1>SPORTS BIKES AND MOTORCYCLES</h1>
+            </div>
+        </div>
+    </div>
+    <!-- Navigation -->
+    <nav>
+        <ul class="container">
+            <li>Eyewear</li>
+            <li>Apparel</li>
+            <li>Gadgets</li>
+            <li>Vehicles</li>
+            <li>Classes</li>
+            <li>Contact</li>
+        </ul>
+        <ul class="mobile-nav container">
+            <li>Menu</li>
+        </ul>
+    </nav>
+    <div class="container">
+        <div class="products">
+            <div class="product">
+                <div class="product-image">
+                    <img src="/Users/timucincakir/Dev/Projects/SecretAgentSupply/resources/images/pen.png" alt="">
+                </div>
+                <span class="description">Exploding Pen</span>
+            </div>
+            <div class="product watch">
+                <div class="product-image">
+                    <img src="/Users/timucincakir/Dev/Projects/SecretAgentSupply/resources/images/watch.png" alt="">
+                </div>
+                <span class="description">Cellular Watch</span>
+            </div>
+            <div class="product glasses">
+                <div class="product-image">
+                    <img src="/Users/timucincakir/Dev/Projects/SecretAgentSupply/resources/images/glasses.png" alt="">
+                </div>
+                <span class="description">Thermal Glasses</span>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="business-info">
+            <div class="info">
+                <span class="title">Location</span>
+                <span>-47.346436, 84.32354</span>
+            </div>
+            <div class="info">
+                <span class="title">Hours</span>
+                <span>0800 - 1800</span>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+                Copyright Secret Agent Supply Inc.
+        </div>
+    </footer>
 </body>
 </html>
