--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="/Users/timucincakir/Dev/Projects/SecretAgentSupply/resources/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="/Users/timucincakir/Dev/Projects/SecretAgentSupply/resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/resources/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="/resources/css/style.css">
     <title>Secret Agent Supply Inc.</title>
 </head>
 <body>
