--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <img src="resources/images/logo.png" alt="">
+            <img src="/resources/images/logo.png" alt="">
             <span>SECRET AGENT SUPPLY INC.</span>
         </div>
     </header>
@@ -43,19 +43,19 @@
         <div class="products">
             <div class="product">
                 <div class="product-image">
-                    <img src="resources/images/pen.png" alt="">
+                    <img src="/resources/images/pen.png" alt="">
                 </div>
                 <span class="description">Exploding Pen</span>
             </div>
             <div class="product watch">
                 <div class="product-image">
-                    <img src="resources/images/watch.png" alt="">
+                    <img src="/resources/images/watch.png" alt="">
                 </div>
                 <span class="description">Cellular Watch</span>
             </div>
             <div class="product glasses">
                 <div class="product-image">
-                    <img src="resources/images/glasses.png" alt="">
+                    <img src="/resources/images/glasses.png" alt="">
                 </div>
                 <span class="description">Thermal Glasses</span>
             </div>
